<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/baground"
        tools:context=".Login">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="29dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/whitelogo"
            android:contentDescription="@string/todo" />


        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">


            <Button
                android:id="@+id/button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"

                android:layout_below="@+id/et_lpassword"
                android:layout_centerHorizontal="true"

                android:background="@drawable/collaspingbg"
                android:onClick="onLogin"
                android:text="@string/login" />

            <EditText
                android:id="@+id/et_lemail"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="51dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:autoLink="none"
                android:autoText="false"


                android:background="@drawable/shape"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingEnd="25dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:textIsSelectable="false" />

            <EditText
                android:id="@+id/et_lpassword"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/et_lemail"
                android:layout_alignStart="@+id/et_lemail"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/button"
                android:layout_alignParentStart="false"
                android:clickable="false"
                android:gravity="center"
                android:onClick="onRegister"
                android:paddingTop="40dp"
                android:text="@string/create_new_account"
                android:textColor="@color/cardview_light_background"
                android:textSize="20sp"
                android:textStyle="bold|italic" />


        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
